--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -5,30 +5,144 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, numquam quisquam! Iure, alias doloremque atque
+        repellendus voluptatum eaque quibusdam iusto repudiandae quia fuga dignissimos pariatur odio? Hic, accusamus eum
+        quasi delectus aperiam optio harum sed autem recusandae minima tempore quod minus deserunt ab cum? Odio itaque
+        error sit maxime perferendis corrupti qui id harum vel natus, cum sed saepe dolore, vero omnis necessitatibus.
+        Eaque ab qui possimus recusandae unde fugiat odio vero itaque, eos ipsam voluptatum. Expedita consectetur
+        aspernatur similique explicabo, porro minima ad, quis veniam excepturi nobis quidem pariatur aperiam saepe fugit
+        magni. Veniam recusandae blanditiis reprehenderit ut quasi mollitia aspernatur, possimus incidunt quod porro sit
+        quisquam inventore ex quia maxime, alias reiciendis natus ipsum quaerat quam cupiditate fugiat tenetur! Et,
+        accusamus at voluptates libero vitae vel voluptatum omnis numquam, earum laborum fugiat id quod quasi quas quos
+        qui! Fuga eveniet accusamus eius odit ipsam nihil dolore quos fugit et consectetur aperiam nam non cupiditate
+        eligendi minus dicta, quod error cum aspernatur laudantium modi sunt consequuntur iure! Expedita, tempora totam!
+        Minima perspiciatis alias architecto est amet nisi quaerat non quae excepturi similique ipsa, commodi ducimus
+        maiores. Temporibus eius consequuntur minima exercitationem laborum commodi vitae facilis perferendis? Possimus
+        cum dignissimos totam cupiditate inventore aperiam repellendus debitis deserunt tempore tenetur provident
+        accusantium in veniam, expedita rerum voluptatem id optio repudiandae hic excepturi obcaecati ut perferendis
+        eligendi. Ipsum et explicabo exercitationem animi eum. Assumenda sint expedita nemo sapiente possimus inventore
+        impedit blanditiis laborum accusamus veniam reiciendis, omnis corporis nam quidem minima. Architecto, neque iure
+        a asperiores iste veniam, earum explicabo nostrum dolores aliquam dignissimos officia cupiditate incidunt fuga?
+        Mollitia odit, laborum quibusdam reprehenderit molestiae optio, consequuntur, eum nobis incidunt perferendis est
+        quia quis! Aut, provident. Qui totam, quisquam illo nostrum vitae impedit laudantium soluta quidem. Quis illo
+        quas vitae laborum ad nemo voluptates voluptatibus consectetur odio cum harum ipsa quam, aspernatur soluta
+        mollitia velit dolore quos! Expedita architecto odio consectetur autem, esse assumenda dicta veniam quo ipsum
+        beatae, numquam voluptas reiciendis? Perspiciatis, ipsum facilis eaque iusto rem impedit ullam ipsa adipisci at,
+        nulla molestiae voluptatum deserunt suscipit dolore pariatur dolorum cum nesciunt excepturi. Incidunt iste
+        sapiente optio sequi nostrum doloremque non? Accusamus, doloremque a magni, at tenetur ab alias suscipit fugiat
+        dicta, in quis saepe sit repudiandae adipisci sint sunt expedita laudantium iure esse eaque rerum officia
+        itaque? Architecto dolorem officiis optio possimus numquam doloribus alias dolorum sint tempore, qui mollitia
+        placeat, beatae illo! Libero obcaecati possimus odio beatae provident reprehenderit neque culpa, excepturi
+        exercitationem, minima sunt aliquid ipsa velit architecto rerum dignissimos aut veniam nesciunt id iure
+        cupiditate. Veritatis magni iusto quasi laborum aliquid. In fugit nostrum nesciunt deleniti quia, incidunt,
+        sequi quo ipsum tenetur nemo repellendus? Aspernatur repudiandae voluptates, distinctio nam at quis voluptas
+        laudantium? Nesciunt dignissimos consequatur cupiditate, earum in soluta corporis et quo. Numquam excepturi
+        commodi corporis nisi, officia eius ullam voluptatum harum consequatur quisquam a sint nesciunt similique ab at
+        dolore. Aliquid nihil facere molestias animi ducimus magnam, quasi eius rerum alias modi voluptatum repellendus
+        adipisci veniam tempora quam nisi, laudantium incidunt sapiente quisquam voluptatem, quaerat recusandae.
+        Repellendus eos ab repudiandae praesentium, sequi facere et modi perspiciatis assumenda magnam distinctio!
+        Incidunt tenetur porro odit ipsam earum error, cumque dolore at laborum. Officiis sunt ullam, recusandae
+        asperiores numquam eum doloremque distinctio unde quaerat necessitatibus quibusdam mollitia nesciunt sequi
+        impedit. Explicabo alias corporis necessitatibus, eaque hic voluptate nesciunt ex velit beatae eum repellendus
+        amet vero voluptatibus fugiat, id iusto iste! Est magnam consequatur explicabo nemo quae numquam incidunt non
+        consectetur, minus provident repudiandae dolores laborum quaerat, magni repellat quo cupiditate sint. Itaque et
+        dolorem debitis labore? Ipsa dolorem corrupti nam temporibus numquam laboriosam aut ad dicta explicabo
+        voluptatum, pariatur nihil! Temporibus sit, vitae eveniet perspiciatis ea minima, eaque debitis animi atque
+        nihil voluptates consequatur minus aliquam molestiae possimus asperiores doloribus labore assumenda ipsa dolores
+        nostrum, ad at odit. A repellendus impedit aliquam velit, consectetur vitae nulla ex inventore excepturi. At
+        fugiat architecto ipsum ex et. Veniam commodi dolore perferendis quas corrupti quisquam praesentium
+        exercitationem aperiam. Ducimus dolore, earum ex deserunt quisquam, quidem cumque quas consectetur tempore atque
+        consequatur reprehenderit autem magni quia debitis! Sunt cumque dolore voluptatibus praesentium a adipisci,
+        libero provident facere excepturi natus nulla accusamus nesciunt porro voluptas laudantium atque beatae rem
+        ipsum necessitatibus est. Illo modi dicta ad animi maxime recusandae nesciunt nulla odio, magnam consequatur
+        ducimus ut cumque ex soluta aliquid aperiam est numquam voluptatem sequi veritatis similique? Quos, delectus!
+        Cum quas molestias, blanditiis ad accusantium, eligendi quaerat inventore repellat porro ipsa tempore beatae
+        ratione odit non debitis odio doloremque, minus praesentium iusto? Alias quos error officiis delectus, itaque
+        placeat vel! Excepturi iure repellendus laborum delectus dignissimos similique aliquam repudiandae incidunt
+        doloremque tenetur sed eveniet aperiam veritatis magni eaque quibusdam, quae, perspiciatis laboriosam, porro
+        amet quas sapiente quisquam. Consequatur architecto corrupti nihil commodi at ipsam asperiores a aut assumenda
+        quam? Sit dolores dolorum in iure nisi! Est sit quo, quae ab tempora similique ea explicabo quos dicta rem
+        itaque fugiat delectus modi assumenda eum recusandae aliquid consequuntur, autem dolorem aspernatur voluptate
+        nobis adipisci tempore? Vel laboriosam doloribus voluptatem nobis? Modi accusamus, ut, sed suscipit voluptas
+        illo mollitia soluta ipsum aspernatur autem sit quod error consequuntur odit? Vitae eligendi ut magnam ex
+        voluptas sed magni et adipisci placeat porro, mollitia quidem velit inventore totam fuga! Illo reiciendis eius
+        non? Quidem, quaerat exercitationem autem doloribus eveniet fugit et. Deleniti et voluptates dignissimos non
+        totam aliquam cupiditate ea, officia obcaecati voluptatum suscipit repudiandae esse, dolorum ab consectetur
+        reiciendis. Omnis ullam quis animi velit, minus atque ducimus repellat enim eaque tempora odit magni qui
+        praesentium alias repellendus quae consectetur? In error deleniti veritatis maiores velit dolore expedita. Animi
+        quas odit perferendis sequi, enim architecto. Voluptatem voluptas suscipit laborum quia dolorum aperiam, labore
+        doloribus, beatae deleniti earum perferendis quo. Tempora officia perferendis vero impedit asperiores vel minima
+        debitis velit excepturi rem modi nemo corporis possimus, eveniet, quaerat similique dolorum deserunt atque esse
+        quod itaque ea incidunt praesentium neque. Modi ullam culpa ab! Sapiente officia ipsam ipsa quibusdam qui modi
+        assumenda! Aut id consectetur natus error dicta odit earum corrupti ipsam, fugit nesciunt incidunt, illum ipsum
+        voluptatum omnis, atque repudiandae nulla quas possimus delectus maiores? Beatae eius quos accusamus tempora
+        dicta magni cumque unde modi est nesciunt deserunt, consequatur voluptatum nisi id dolores, aliquam harum amet
+        possimus nulla maiores! Quia vitae aliquam nihil, culpa ut accusamus eligendi quas laborum ea. Voluptatem, eaque
+        ex enim ipsa, quos natus quibusdam quae nam laudantium explicabo nostrum minima ad! Voluptatem libero expedita
+        magni aspernatur fugit quos, ducimus labore, quisquam ipsum quae non nihil corrupti. Sequi accusantium
+        perferendis voluptates quisquam ex ipsa veniam facere magnam eius dolore quis et officiis hic incidunt maxime
+        neque quae, architecto eum. Vero consectetur doloremque ad reiciendis ipsum delectus nam quidem inventore,
+        perferendis possimus unde officia fuga architecto iure cupiditate officiis rerum dolor maxime aperiam vitae
+        perspiciatis dolore doloribus atque. Deleniti amet veritatis quibusdam. Sed fugit ut quam dolorem reprehenderit
+        explicabo, amet ipsam quis sunt autem corrupti ipsum eos quae, saepe tempora, temporibus nisi ducimus esse. Iste
+        in a maxime incidunt illum voluptatum ducimus, impedit porro tempora quaerat, qui animi laudantium commodi,
+        fugit atque non eum modi totam aspernatur sequi voluptatem quisquam dolorem quibusdam sed. Iste molestiae,
+        aliquid ipsa debitis atque rerum deserunt harum nesciunt cumque ex accusantium enim explicabo distinctio
+        consequuntur ullam libero a unde nulla, vero voluptas temporibus suscipit eaque. Quibusdam temporibus suscipit
+        neque vero sapiente, similique nulla consequatur reprehenderit sunt veritatis sint, necessitatibus aliquid
+        voluptatum quis. Voluptatem repellendus sit itaque tempora quisquam impedit porro nihil? Illo, quo quaerat
+        dolorem nihil minus repellat ea voluptatibus ratione vel ullam iure ex cupiditate accusantium tempora,
+        excepturi, consectetur unde mollitia veritatis natus fuga eveniet. Saepe doloremque exercitationem enim quas
+        architecto, veniam voluptate pariatur est laudantium. Ipsam deserunt quas maxime esse, tenetur est obcaecati
+        corrupti reiciendis, possimus molestiae ea in ducimus cupiditate nihil, placeat ipsum nemo voluptas. Amet,
+        nesciunt ex? Ut quaerat voluptatem magni repellendus, consectetur quibusdam pariatur quidem rerum similique
+        voluptates debitis dolorum, aliquam, obcaecati perspiciatis alias nulla praesentium ad commodi porro enim
+        adipisci. Quibusdam alias totam cupiditate voluptatem temporibus tempore perspiciatis ab officiis, ipsa quasi
+        autem ratione! Quam repellat quisquam accusamus aspernatur. Omnis, assumenda! Quam optio excepturi quas nam!
+        Accusamus iusto consequatur animi similique accusantium velit tempore culpa distinctio eos odit, maiores,
+        quibusdam nisi amet, at enim. Vero, doloribus? Fuga id officiis libero magnam repellat non possimus magni
+        necessitatibus vero? Repudiandae aliquid excepturi autem tempora nam error esse consequuntur cumque obcaecati
+        eos voluptates quo veniam cum, animi explicabo deserunt cupiditate maiores quae ad saepe eveniet facilis
+        necessitatibus iusto! Delectus accusantium dolor beatae deleniti minus optio sit officiis nisi explicabo vitae
+        distinctio fugit voluptate rem accusamus, amet magni quaerat dignissimos ipsum. Quas numquam architecto aliquid
+        necessitatibus nesciunt nobis eaque ducimus facere dolorem, quis tempora porro? Molestias atque praesentium et
+        ratione, delectus corporis doloribus voluptate eum voluptates, unde, cumque quam. Eaque minima facere blanditiis
+        incidunt voluptate nemo voluptates. Autem hic nemo et earum fugiat? Et numquam voluptatem quidem necessitatibus
+        explicabo error quisquam animi maiores optio, ducimus sequi soluta vitae architecto ab unde nesciunt non
+        recusandae ex, doloribus voluptatibus, dolor voluptate accusantium magnam! Fugiat illum natus eos laudantium non
+        dolor beatae dignissimos in aperiam inventore pariatur eligendi porro maxime deleniti minima impedit minus nihil
+        aliquid delectus reprehenderit, facilis, earum obcaecati voluptatem. Officia, nihil culpa deserunt eligendi
+        quisquam animi eos aspernatur adipisci, harum beatae architecto consectetur incidunt minima eum dolorem
+        recusandae earum quas. Quia tempora fugiat eligendi voluptatum quos iure nesciunt, culpa delectus. Eveniet
+        consequuntur voluptas perferendis voluptatibus accusantium aut omnis qui explicabo perspiciatis repellat a
+        commodi, natus impedit, atque illo! Eius libero esse dignissimos! Deserunt enim dolores cumque, veritatis
+        obcaecati nulla quas quos doloribus amet odio iure est fugiat at labore saepe ullam suscipit qui nobis! Ullam
+        exercitationem nemo vero ipsa consequuntur quo temporibus dicta accusantium natus iure. Perspiciatis enim aut
+        possimus ipsa eligendi alias illum, quasi magni explicabo, ratione eum. Repellat libero similique ipsam fugit
+        facilis vero magni rerum est quia nam? Nulla fuga consectetur accusamus quaerat perferendis maxime tempore
+        voluptatibus labore saepe, repellendus aperiam quae, quibusdam iste inventore! Delectus eveniet nemo aliquam
+        repellendus quos, perferendis neque incidunt, consequatur et dolore, tempora quibusdam obcaecati nihil
+        accusantium dolorem voluptatibus ipsum ratione maiores! Voluptatum temporibus et qui id facere vel odit quia
+        saepe vero dignissimos minus architecto eligendi, sunt asperiores necessitatibus consequuntur officia natus
+        porro incidunt, fuga dolorum sit sequi? At molestias, maxime debitis earum, nostrum esse officiis assumenda iste
+        sunt molestiae error veritatis adipisci provident pariatur suscipit? Harum temporibus ipsam quidem cumque. Nam
+        fuga, odit consectetur minus ab voluptatem facere enim nulla quam, reprehenderit ea mollitia, quibusdam unde
+        reiciendis laborum illum. Enim ratione hic quibusdam tempore! Ipsam esse soluta aliquam, tempore voluptatibus
+        quibusdam eaque odio. Asperiores earum sunt sit, delectus, veritatis repudiandae ratione eveniet omnis corrupti
+        voluptatem quae esse minus. Obcaecati molestias culpa et adipisci odio magnam quas vero pariatur illum, maxime
+        unde labore accusamus deserunt! Odit facere itaque assumenda voluptate, magnam voluptatibus dolorem amet eveniet
+        rerum impedit inventore possimus dolore quasi numquam enim doloribus porro illo cumque soluta error? Porro
+        eveniet aliquam suscipit, rem accusantium temporibus minima sapiente perspiciatis maxime dolore repellat hic
+        nulla pariatur, consequatur veniam totam perferendis ipsa! Aspernatur, placeat reiciendis. Porro laboriosam, et
+        saepe perspiciatis cum repellendus iste beatae. Vero est ullam non eaque aspernatur quasi doloribus molestiae
+        recusandae quia, accusantium impedit quo officiis placeat optio libero pariatur ipsam quod officia sit ut! Id,
+        in vero harum cumque laborum porro nostrum ut praesentium debitis obcaecati tempora aliquam odit nesciunt
+        explicabo placeat provident numquam magnam quam, iure est. Delectus, officia temporibus corrupti sapiente vel
+        deleniti. Ad labore suscipit fugiat reprehenderit vero dolores officia aspernatur impedit sit? Eius, veritatis?
+        Culpa dolores eum fuga suscipit labore tempore quod perferendis harum aperiam. Tempore quos aliquid
+        exercitationem sint nesciunt hic modi architecto atque expedita voluptatem deserunt veniam, cupiditate animi
+        adipisci laborum illo. Id, voluptate! Eaque quaerat ut quibusdam. Sint, a eligendi. Impedit doloribus accusamus
+        et esse consectetur incidunt ratione distinctio aut id eum, quisquam minima laudantium optio facere, magnam
+        perferendis voluptatibus quasi dolor? Iste vitae aliquid voluptatibus sit commodi sed nulla quos aliquam soluta
+        corrupti.</p>
 </div>
-@* @model IEnumerable<CRM.Models.Users>
-
-@{
-    ViewData["Title"] = "User List";
-}
-<h2>User List</h2>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Email</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model)
-        {
-            <tr>
-                <td>@user.id</td>
-                <td>@user.name</td>
-                <td>@user.email</td>
-            </tr>
-        }
-    </tbody>
-</table> *@
