login and clients index page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,145 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, iure esse alias vitae, distinctio explicabo
-        maxime expedita ducimus, laudantium adipisci deserunt reprehenderit ea cumque ex possimus autem. Voluptas, vel
-        exercitationem fugit inventore vero labore id molestiae tenetur cum consectetur dolorum, sequi cupiditate
-        corporis adipisci sed quisquam, doloremque sit earum? Repudiandae assumenda deleniti provident illo odio
-        deserunt? Libero corporis veritatis, possimus cupiditate in, nesciunt sit tempore rerum voluptate porro deserunt
-        provident adipisci a labore illum dolor? Eius ratione beatae quis consequuntur omnis, ullam saepe autem officiis
-        voluptatibus, deleniti distinctio nam commodi odit quos blanditiis accusamus. Molestiae in velit cumque dolorem
-        nostrum optio nam iusto pariatur, distinctio expedita quas alias rerum voluptates quibusdam ipsa! Ipsum expedita
-        maxime vel quam est eum doloribus ullam dolor blanditiis odit nostrum facilis minus autem soluta recusandae, in
-        ab eligendi a accusantium hic facere dolorem. Asperiores voluptate officia architecto exercitationem, quia hic
-        earum voluptatibus rem. Unde, modi inventore. Nisi iste doloremque eligendi magnam perferendis dolor nam velit
-        voluptatibus aliquam magni illum corporis deleniti, eveniet provident, modi facilis, ex blanditiis! Porro
-        cupiditate iste dignissimos tempora, totam consectetur quia eligendi nisi illum sit similique libero dicta a
-        culpa veritatis suscipit dolore placeat incidunt accusamus quis temporibus magni ipsum! Est aliquam ea placeat
-        iure id unde corrupti! Placeat suscipit sapiente voluptatum nesciunt doloribus repellat voluptate architecto,
-        necessitatibus similique quidem! Nostrum error rerum, autem omnis, provident aperiam possimus repellendus
-        recusandae cum est ad aut in porro obcaecati eius enim deleniti reprehenderit modi molestias fugiat eligendi.
-        Officia rem necessitatibus ipsa. Non nostrum culpa provident, debitis officia dolorem ipsam obcaecati. Quidem,
-        porro! Maxime provident sint animi quidem dolor soluta nostrum illum assumenda! Cupiditate possimus,
-        voluptatibus numquam fugiat, vero tempora explicabo adipisci, laboriosam repellat recusandae voluptate dolore
-        temporibus alias corrupti ea! Eum incidunt ipsa repellat magnam nihil nesciunt at repudiandae cupiditate ratione
-        ut assumenda distinctio tenetur fuga, minus nobis possimus voluptatibus deleniti dicta, adipisci libero aperiam
-        laboriosam beatae! Ad aperiam quia sint hic, ipsa nemo a quod excepturi totam, molestias dolore quo tenetur
-        quae, corrupti illo veritatis quibusdam fugit ullam quaerat accusamus placeat? Necessitatibus cum nulla ducimus
-        optio excepturi maiores, et ipsa debitis quae omnis, perspiciatis ex amet officia a maxime quas magnam! Debitis,
-        vero eaque dolorem deleniti a, suscipit explicabo fuga sint, velit provident mollitia beatae nostrum?
-        Dignissimos odit tempore ducimus autem earum, mollitia dolorem qui voluptates incidunt velit in debitis neque
-        numquam non nobis consequatur veniam sequi natus! Possimus et ipsum, excepturi eius rerum ab quae! Eius,
-        recusandae labore? Corrupti recusandae eligendi blanditiis quos veniam exercitationem enim. Provident, quis.
-        Eius consectetur dicta corrupti aliquam. Illum dolore impedit expedita voluptatibus delectus quibusdam dolor
-        veritatis neque? Voluptatum, quisquam sapiente quibusdam assumenda fugit at ratione rem numquam pariatur laborum
-        debitis officia, placeat veniam? Rerum quis, nisi unde velit commodi itaque adipisci, fuga culpa est, cupiditate
-        sunt aspernatur optio accusantium labore veniam autem accusamus nihil quaerat? Commodi vel vitae reprehenderit
-        tenetur, ab cumque soluta similique, adipisci eius minima recusandae voluptas nostrum dolorum illum itaque
-        incidunt repellat facilis provident architecto dicta? Unde aliquam quis nulla dolorem illo, tenetur perferendis
-        ipsum ipsam veritatis autem delectus mollitia aperiam accusantium praesentium laboriosam officia ad deleniti
-        officiis harum tempore iste repudiandae eos! Commodi, odio, eaque officia voluptates velit a doloribus autem
-        adipisci similique sequi hic maiores dolore. Accusamus ab impedit atque ipsum, quae sunt soluta, quia deleniti
-        animi asperiores eum? Blanditiis eius error architecto reprehenderit quo dolorum eum cupiditate iure nam,
-        tempora recusandae rerum ipsa? Eaque, consequuntur quo. Quisquam, porro atque aliquam accusantium necessitatibus
-        repellat, perferendis, tempora optio aut dolor omnis rerum voluptatibus officia modi voluptate illo! Ipsum
-        voluptatem molestiae incidunt iusto reprehenderit illo ipsam nesciunt voluptates dolores doloribus dolorum
-        eveniet consequuntur dolorem harum exercitationem, est architecto nobis et. Inventore saepe ad voluptas debitis
-        fuga, adipisci amet laboriosam quidem ea consequuntur id veniam, optio sequi totam earum quas beatae dignissimos
-        autem nam nisi facere aliquid expedita? Ipsa eius sit consequatur! Eum soluta quibusdam voluptates magnam, fugit
-        possimus recusandae voluptatibus maxime! Error totam nesciunt architecto recusandae. Harum aperiam, sapiente,
-        corporis accusamus quasi nobis ut iste quae architecto, voluptate optio repellendus non asperiores officiis
-        nemo! Dolorem officiis voluptatibus dolores praesentium. Consequatur sunt error velit culpa omnis. Vel deserunt
-        commodi maxime sint quaerat! Eaque nulla, cupiditate totam adipisci sequi perferendis quis? At totam beatae
-        nesciunt cum inventore adipisci veritatis minus asperiores in velit fugiat similique temporibus aliquid deserunt
-        nobis animi nostrum suscipit, voluptas dolorum minima incidunt labore? Officia, voluptatum maxime fugiat
-        suscipit magnam, et, minus laboriosam quia omnis praesentium repellat illum. Blanditiis cupiditate fugiat quidem
-        veniam dolorum cumque distinctio veritatis. Maxime repudiandae in nostrum suscipit inventore iure optio sit sint
-        numquam labore, adipisci, atque, officiis impedit quae consequatur! Facere cum eos consequatur quam, quasi,
-        consectetur, aut doloremque quidem perferendis eaque fugiat! Voluptatem tenetur architecto iste laboriosam
-        dolorum earum, nulla totam error excepturi animi iure reiciendis, eum in eligendi, inventore sapiente. Similique
-        excepturi quibusdam dolorum animi laboriosam iusto aut consectetur dolores, aliquam optio voluptatum, quasi
-        consequatur nisi assumenda, labore fuga facere vero eaque. Adipisci deserunt molestias ex alias corrupti
-        dignissimos dicta nulla tenetur officia laboriosam eaque libero harum voluptatibus, quos expedita accusantium
-        optio nisi modi sapiente mollitia sunt, nihil maxime ea tempora? Error quibusdam repudiandae quidem, quam dolor
-        repellendus sequi voluptas perferendis iure beatae quas vel hic deserunt necessitatibus, nam blanditiis!
-        Corporis officiis fugit ducimus totam, placeat dolor, eius sint aut temporibus rem quae esse ipsum dolore iusto
-        quasi officia? Dignissimos, corporis expedita. Commodi corporis laudantium vel tempore ipsum culpa quidem, ipsa
-        labore maxime reiciendis? Dolor, eligendi? Ea recusandae voluptatibus nisi id quidem iste quo, voluptatem
-        veritatis unde accusamus tenetur. Quis a, earum maiores nihil omnis expedita hic velit necessitatibus aliquid
-        vero libero aperiam, voluptatum perspiciatis ab ratione praesentium eaque similique doloremque, labore tempora
-        corrupti ut sequi. Sed dolore architecto amet accusantium dolorum optio ex doloribus debitis eius, distinctio
-        perspiciatis dolores voluptas itaque laudantium quidem, modi vitae. Voluptatem odit, ipsa id sequi maiores quas
-        fugit nulla! Obcaecati tenetur non iusto, quibusdam debitis ex sed? Aut qui, doloremque dolorum velit eius ex ea
-        vitae ducimus repellat fuga perspiciatis? Nam, eum? Voluptatibus, explicabo voluptates labore sunt aliquid
-        nulla. Aperiam maiores aspernatur error possimus consequatur commodi necessitatibus eligendi officia esse
-        dignissimos in pariatur velit, modi voluptates a rem blanditiis unde labore doloremque omnis fugiat vitae
-        tempora ut placeat. Optio ullam blanditiis ipsum amet? Eaque molestias deleniti ipsum fugit provident sequi
-        similique dolorum natus mollitia aut minima alias eligendi, corporis voluptatem quam ex ipsam soluta perferendis
-        ducimus et iste sit repellat quae. Ipsam natus, cumque temporibus ab asperiores pariatur voluptas voluptatem
-        eaque, facilis aut ducimus at ex laboriosam incidunt nihil, sunt deserunt architecto officia laudantium. Labore,
-        iure architecto commodi in odio, officiis rem eligendi doloremque soluta delectus accusamus. Necessitatibus
-        sapiente aperiam blanditiis. Quibusdam culpa harum fugit voluptate placeat sequi rem, iusto error, facilis, vel
-        maxime? Cupiditate inventore culpa aut alias officia, nostrum debitis facilis accusamus quod voluptates,
-        consectetur sunt? Est dignissimos explicabo obcaecati laboriosam fuga voluptatum aperiam, sit, quae quasi ipsam
-        accusamus, voluptate recusandae temporibus repellendus iusto. Voluptates, sapiente, laudantium quae culpa
-        aliquid laboriosam natus quam modi iure excepturi pariatur aut doloremque! Vitae nobis veniam fuga architecto
-        quam soluta voluptatem, aperiam ab ipsam provident quis doloribus molestiae ducimus recusandae tenetur earum
-        neque quibusdam quas expedita praesentium qui! Voluptatum sequi praesentium, maxime vel sapiente suscipit, quod
-        quibusdam quia doloribus ratione iste ipsum animi cumque, illo ducimus sed accusamus voluptates non temporibus
-        amet! Voluptas repudiandae ipsa dolor assumenda omnis magnam dolore temporibus voluptatum consequuntur autem
-        neque animi veritatis culpa deserunt molestias facilis quaerat maxime ad, maiores ab magni, illo voluptatibus!
-        Quis beatae, nulla consequatur est optio vel et quae deserunt, excepturi, veritatis amet. Tenetur explicabo
-        distinctio perferendis facere natus. Corrupti fuga excepturi temporibus reiciendis officia! Nisi, quis
-        reiciendis eveniet ipsa nesciunt perspiciatis, doloremque impedit, provident officia libero cum dignissimos
-        necessitatibus neque. Repellendus praesentium odio quod assumenda consequuntur provident. Esse molestias beatae
-        asperiores vel temporibus voluptatem delectus quisquam, ipsum, optio nobis culpa fugiat magnam incidunt,
-        similique nulla deleniti odio illo voluptatibus. Dolorum ipsa quaerat rem placeat exercitationem provident
-        molestiae. Reprehenderit aliquam quaerat iusto consequuntur voluptatum natus enim totam, quo nemo doloribus vel
-        neque aperiam libero ex quasi similique magnam harum deleniti officia expedita delectus. Odit sit aperiam sed
-        impedit doloribus, quidem magni laborum ratione excepturi nihil, eligendi corporis itaque officiis velit unde
-        eos dolor porro delectus atque aliquam quam? Blanditiis expedita ratione temporibus impedit? Rerum ducimus
-        repellat nam, adipisci magni in eum debitis laboriosam! Officiis, consequuntur magni ullam velit, quia, ex
-        distinctio quisquam maxime quidem expedita aperiam. Dolores excepturi, placeat minima mollitia ab labore id illo
-        autem voluptates, amet eligendi architecto ad distinctio non consectetur iure cumque. Nesciunt, corporis.
-        Mollitia quisquam, inventore praesentium vero fuga placeat reprehenderit alias, nisi consequuntur voluptates
-        animi nesciunt porro! Cum, fugiat. Et mollitia odio, dolor vero corporis tempore quam reprehenderit? Blanditiis
-        natus repellendus praesentium quos? Corrupti recusandae quae accusantium repellendus provident necessitatibus
-        beatae, possimus, est libero laboriosam architecto doloribus ea dicta temporibus voluptatem alias numquam facere
-        fugit ipsa ex pariatur, nihil quibusdam dolor dolorum. Excepturi nisi voluptatem harum veniam consequuntur neque
-        debitis quam distinctio dicta in? Soluta hic corrupti dolor nihil quis omnis facilis, aliquam perferendis. Est
-        quisquam quidem fugit consequatur amet adipisci hic, aliquam voluptates reiciendis eligendi vel libero at
-        accusantium voluptate maiores magni quo ipsa nesciunt sunt? Eveniet officiis cum, quam corrupti, debitis
-        eligendi, neque pariatur placeat perspiciatis ducimus voluptate eius soluta omnis nihil sequi nam odit modi.
-        Tenetur quod eos accusantium rerum impedit explicabo! Itaque soluta consectetur illum minus molestias quisquam
-        delectus quidem reiciendis repellendus? Quidem nostrum reiciendis est cum officiis, dicta mollitia ipsum
-        delectus dolor esse repudiandae, inventore qui ad praesentium ex rem. Porro, odit minima magnam placeat cum odio
-        facilis sed numquam repellat iusto vitae dolores! Laborum magni illum esse adipisci impedit itaque excepturi
-        facere voluptatem modi deserunt hic laudantium vero fugit vitae atque, provident assumenda. Eligendi ipsa unde
-        ea atque et facere dolores, ad est! Veniam commodi exercitationem rem incidunt molestias dicta vero dolore
-        molestiae? Delectus, fugit quidem! Sit reiciendis accusantium, fuga voluptatibus cum provident consequatur, quae
-        iusto ea sint saepe voluptates consectetur alias odio quod eum quo ipsam natus deserunt mollitia eius nam fugit!
-        Similique eligendi optio ducimus soluta minus et, ad ullam maxime qui aspernatur accusamus. Id provident maiores
-        tenetur voluptatibus, ad sunt dolorem ab veniam totam at eaque fugit quia laboriosam, dolore tempora obcaecati
-        iusto ipsum odio hic alias consequatur perferendis? Fugit assumenda sed itaque, soluta doloribus dolor quisquam
-        quis quia incidunt eum voluptatum fuga totam explicabo optio expedita minus. Perferendis illo deserunt earum
-        quasi odio. Commodi esse ut consectetur ipsa cupiditate velit ducimus, culpa quo dolorem soluta suscipit
-        deleniti ipsum, ex odit facere placeat ullam corrupti fugit excepturi quidem. Sint ab cupiditate natus maiores
-        quia. Odit rem, odio beatae enim illo ut obcaecati fugit nisi incidunt dolore dolor provident? Hic non
-        molestias, voluptatibus omnis nam incidunt! Ratione vel provident facere vero nemo aliquid distinctio tenetur
-        deserunt? Animi quisquam maiores rerum accusantium amet, perferendis sit vel similique reiciendis. Laudantium
-        animi quis expedita, id ut omnis excepturi. Eum dolor est eveniet, optio qui harum consequuntur maxime itaque
-        pariatur facilis, soluta, adipisci sed. Praesentium velit ut odio rerum adipisci quis, eum maiores modi
-        inventore fugiat magni repudiandae, voluptatem eligendi et unde at enim odit corrupti laboriosam maxime est
-        deserunt. Nihil rerum possimus deleniti praesentium quisquam odit sapiente accusamus saepe et nobis consectetur
-        nemo quia, optio nesciunt, earum, neque aspernatur voluptate. Vero aliquam mollitia error esse sed accusantium
-        fugit alias impedit repellat eius quod, eveniet blanditiis exercitationem facere neque amet enim provident
-        incidunt eaque ex! Sint a assumenda hic consequuntur ut ad reprehenderit. Ipsa, eius nemo doloribus iure porro,
-        inventore maxime consequatur laudantium distinctio quibusdam explicabo ea, debitis voluptatem. Optio,
-        reprehenderit sit. Optio, suscipit unde at eligendi ut natus expedita similique voluptatum fuga perferendis
-        culpa earum rem sit! Placeat voluptas dolorum harum quia quos ipsum quo in doloremque assumenda eos molestiae,
-        quas nulla totam voluptate facilis eligendi provident. Recusandae, vero quos corrupti nulla obcaecati illum!
-        Vero dolor facilis modi quas quo. Reprehenderit ullam ipsam pariatur, numquam suscipit repellat expedita
-        sapiente aliquam illum nobis consequatur labore? Incidunt doloribus assumenda exercitationem quas nostrum. Magni
-        repudiandae ex magnam. Reprehenderit nulla eaque non repellendus eligendi.</p>
+    <p>Global Capital Forex</p>
 </div>
