--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                 </a>
             </li>
             <li>
-                <a href="@Url.Action("Index", "Home")">
+                <a href="@Url.Action("Index", "Transaction")">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#000000">
                         <path
